objects/BMCServiceDesk__Configuration_Set_Log_Details__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Configuration_Set_Log__c</fullName>
        <description>Master record for all imported/reused records during which Import is done.</description>
        <label>Configuration Set Log</label>
        <referenceTo>BMCServiceDesk__Configuration_Set_Log__c</referenceTo>
        <relationshipLabel>Configuration Set Log Details</relationshipLabel>
        <relationshipName>Configuration_Set_Log_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DML_Operation__c</fullName>
        <description>To store which type of DML operation is performed, record created, updated or used existing while importing.</description>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Reused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Details__c</fullName>
        <description>To store more details of record while importing.</description>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RF_Metadata_Type__c</fullName>
        <description>To represent on which Remedyforce object DML is performed or reused while importing.</description>
        <label>RF Metadata Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Base Element</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
                <value>
                    <fullName>Request Definition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Record_Id__c</fullName>
        <description>Store record Id which is created/updated or reused while importing records.</description>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Record_Name__c</fullName>
        <description>Store record name which is created/updated or reused while importing records.</description>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Configuration Set Log Details</label>
    <nameField>
        <label>Configuration Set Log Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Set Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>